--- a/main.Rmd
+++ b/main.Rmd
@@ -1152,8 +1152,8 @@ fit_hier_NB_slopes <-
     data = standata_hier_long,
     chains = 4,
     parallel_chains = 4,
-    adapt_delta = 0.95,
-    refresh = 200
+    refresh = 200,
+    adapt_delta = 0.95
   )
 ```
 
@@ -1167,7 +1167,7 @@ of them clustered together it's usually safe to ignore (as discussed in the
 fit_hier_NB_slopes$summary(variables = c("alpha", "beta", "sigma_kappa", "kappa", "sigma_mu", "mu"))
 ```
 
-To see if the model infers building-to-building differences in, we can plot a
+To see if the model infers building-to-building differences in the coefficient on `traps`, we can plot a
 histogram of our marginal posterior distribution for `sigma_kappa`.
 
 ```{r fit_hier_NB_slopes-mcmc_hist, fig.width = 3, fig.height = 3}
@@ -1341,7 +1341,7 @@ fit_hier_NB_mos <-
 ```
 
 ```{r fit_hier_NB_mos-summary}
-fit_hier_NB_mos$summary(variables = c("sigma_mo", "mo"))
+fit_hier_NB_mos$summary(variables = c("rho", "sigma_mo", "mo"))
 ```
 
 In the interest of brevity, we won't go on expanding the model, though we
