--- a/main.Rmd
+++ b/main.Rmd
@@ -1545,7 +1545,7 @@ maintenance staff can manage the stations (about one hour of work every two
 months at \$20/hour), but above five traps we need to hire outside pest control
 to help out. They're a bit more expensive, so we've put their cost at \$30 /
 hour. Each five traps should require an extra person-hour of work, so that's
-factored in as well. The marginal person-person hours above five traps are at
+factored in as well. The marginal person hours above five traps are at
 the higher pest-control-labor rate.
 
 ```{r labor-cost-formulation}
@@ -1952,7 +1952,6 @@ fit_hier_NB_gp <- comp_hier_NB_gp$sample(
   parallel_chains = 4,
   adapt_delta = 0.9
 )
-fit_hier_NB_gp$summary()
 ```
 
 ### Examining the fit
